<resources>
    <string name="app_name">App12CungHoangDao</string>
    <string name="txt_quay_lai">QUAY LẠI</string>
    <string name="bach_duong_text">Xem tử vi 12 cung hoàng đạo 2018, Bạch Dương có nhiều xáo động. Vận thế đầu năm không được thuận lợi, giữa năm mọi việc trơn tru, trong khi cuối năm lại có nhiều biến động. Mặc dù năm nay vận thế thăng trầm, nhưng không thể phủ nhận rằng đó là trải nghiệm để tầm nhìn của bạn được mở rộng, bạn thấy yêu cuộc sống và có cách sống tích cực hơn.\n\nDo ảnh hưởng của sao Kim, cung hoàng đạo này có nhu cầu tiêu pha rất lớn vì bạn đề cao sự hưởng thụ vật chất, hào phóng chi tiêu vì thế đây là nguyên nhân bị thâm hụt ngân sách. May mắn thay, năm nay Bạch Dương theo đuổi sự nghiệp một cách tham vọng, bạn luôn muốn tạo sự khác biệt, nhờ đó thúc đẩy sự phát triển sự nghiệp của Bạch Dương. Do đó thu nhập của bạn cũng được cải thiện hơn.\n\nTuy nhiên khi công việc có biến chuyển tốt đẹp cũng là lúc có những biểu hiện không tốt về sức khỏe, tình trạng thể chất không tốt, nguyên nhân có thể do công việc quá bận rộn, mặc dù không đủ thời gian cân bằng nhưng không nên để tình trạng này kéo dài quá lâu mà nên dành thời gian để nghỉ ngơi và tập thể dục đúng cách.\n\nXem tử vi 12 cung hoàng đạo, năm 2018 của Bạch Dương, chuyện tình cảm trong tháng 3 khả quan nhất, bạn có những trải nghiệm vô cùng ngọt ngào của tình yêu và nếu độc thân thì cơ hội cao sẽ tìm thấy một nửa yêu thương trong thời điểm này. Còn lại hầu hết thời gian thì có quá nhiều vấn đề ngăn cản chuyện tình cảm có thể lạnh nhạt, tệ thì dẫn đến chia ly do cảm giác thiếu tin tưởng nhau. Để cải thiện tình hình, cung Bạch Dương và đối phương nên chia sẻ nhiều hơn để thấu hiểu nhu cầu của nhau.\n\nĐiều đáng nói là từ tháng 5 đến tháng 8, 9 và 11, khả năng giao tiếp của bạn được nâng cao, bạn có thể sử dụng khéo léo lợi thế để đạt được một cuộc trao đổi thú vị. Nhờ sự hỗ trợ của sao Hỏa, bạn sẽ rất hạnh phúc khi giao tiếp với người khác, học cách hòa nhập vào cộng đồng mới. Đó là mối quan hệ quan trọng, năm mới, Bạch Dương có cách nhìn nhận mới về các vấn đề, không bị ảnh hưởng quá nhiều bằng lối mòn trong suy nghĩ trước kia.</string>
    <string name="bao_binh_text">Tử vi cung Bảo Bình 2018, sao Thiên Vương ở trong khu vực của Bạch Dương và Kim Ngưu nhưng cách khá xa so với Bảo Bình điều đó đồng nghĩa với việc năm nay không có lợi cho lắm đối với những người thuộc cung hoàng đạo này. \n\nThời điểm đầu năm, sao Kim mang lại cho bạn chút tiền trong ngắn hạn, tuy nhiên số tiền này không mang lại sự giàu có nhưng nếu bạn thể nắm bắt cơ hội đầu tư, may mắn sẽ mang lại cho bạn số tiền lớn hơn. Cơ hội đến thoáng qua, rất chóng vánh, nếu không kịp nắm bắt thì phải chờ đến thời điểm cuối năm.\n\nXem tử vi năm 2018 của Bảo Bình, từ tháng 2, Bảo Bình khá khôn ngoan khi tham gia một dự án tốt nhưng về tổng thể thì việc kinh doanh không được như mong đợi. Có nhiều người soi mói, gặp cấp trên không phù hợp nên hiếm khi có cơ hội thể hiện tài năng. May mắn là bạn có nỗ lực và đóng vai trò cao hơn trong công việc nên tình hình cũng không quá tệ.\n\nTử vi 2018 của 12 cung hoàng đạo, về tình cảm, không có nhiều dấu hiệu khả quan trong những tháng đầu, từ tháng 1 đến tháng 3 những người độc thân đào hoa vượng, có rất nhiều người theo đuổi, nhưng họ vẫn tạo cho bạn cảm giác mơ hồ, dường như họ không thực sự cần bạn. Nửa năm còn lại, Bảo Bình trải qua khá nhiều cảm xúc nhưng hầu hết là không vui.\n\nSức khỏe của bạn không thực sự lý tưởng, mặc dù không bị bệnh nặng hay đau nghiêm trọng nhưng cơ thể trải qua rất nhiều khó chịu, hãy cẩn thận với sức khỏe của mình. Từ đầu đến giữa năm bạn thường có tâm trạng không vui, cần phải học cách thư giãn và giải tỏa áp lực của cuộc sống, đừng đặt tất cả gánh nặng lên vai của mình. Mùa Thu và mùa Đông phải chú ý đến sức khỏe, cố gắng giữ ấm cho cơ thể.\n\nTrong học tập, sao Thủy và sao Kim tác động tích cực ngay từ đầu năm nên thành tích học tập của bạn không quá đáng lo, nếu chăm chỉ và nỗ lực bạn sẽ được đền đáp xứng đáng nhưng trong lúc đó bạn vẫn có nhiều băn khoăn, suy nghĩ.\n\nNăm của sao Hỏa mang lại cho bạn những năng lượng mạnh mẽ, hầu hết các Bảo Bình sẽ chủ động tiếp thu kiến thức, nhưng có một số người học chỉ được những phút đầu sau đó lại bỏ bê. Bạn cần phải điều chỉnh thái độ mới có thể vượt qua áp lực, đạt thành tích tốt.</string>
    <string name="bo_cap_text">Tử vi cung Bọ Cạp 2018 (Hổ Cáp, Thiên Yết), trong năm nay sao Diêm Vương tiếp tục ngự trị tại khu vực công việc của Bọ Cạp truyền cảm hứng cho bạn để tiếp tục cố gắng, nỗ lực. Nhờ đó, tình hình học tập cho đến công việc đều có kết quả đáng kể. Bạn tăng sự kết nối hơn với mọi người, vai trò và vị trí của bạn được công nhận, cảm giác là người quan trọng khiết bạn thực sự rất tự hào, cảm thấy rất hài lòng về bản thân.\n\nSao Diêm Vương ảnh hưởng rất mạnh mẽ khiến công việc lúc lên lúc xuống. Nhưng nhìn chung, mọi việc trơn tru, thuận lợi chỉ đến tháng 9, ảnh hưởng của sao Diêm Vương giảm dần sẽ gây ra một tác động tiêu cực, lúc này bạn phải cẩn thận, không nên có những quyết định quan trọng vào lúc này.\n\nTại nơi làm việc, sao Diêm Vương nghịch hành nhắc nhở bạn cần cẩn thận trong các vấn đề thông tin liên lạc. Nên sống chan hòa với mọi người, duy trì quan hệ tốt đẹp, không nên vì lợi ích riêng mà làm ảnh hưởng tới tiền bạc của người khác. Nếu bạn để cho sự nghi ngờ của họ trỗi dậy, sẽ không hề thuận lợi cho tiến triển công việc của mình trong lai.\n\nXem tử vi 2018 của 12 cung hoàng đạo, năm nay bạn rất nhạy cảm về tiền bạc, khả năng quản lý tiền bạc được cải thiện và có thể nhờ thăng chức mà thu nhập tăng lên. Với những kinh nghiệm có được, bạn cẩn thận hơn với vấn đề liên quan tới tài chính. Bọ Cạp biết cách tiêu xài hợp lý, không gây lãng phí quá nhiều, đủ để duy trì mức sống cơ bản. Với sự hỗ trợ của sao Kim và sao Mộc, mọi việc khá suôn sẻ, thu nhập ổn định, cân bằng hài hòa giữa thu và chi.\n\nĐôi khi Bọ Cạp rơi vào tình huống tiến thoái lưỡng nan, các cặp đôi dễ xảy ra biến cố, nếu không kịp thời nói chuyện thẳng thắn và giải quyết mâu thuẫn, vấn đề sẽ ngày một chồng chất chờ thời điểm bùng nổ, gây ra thiệt hại vô cùng lớn. Cả hai đều có cảm giác tổn thương và muốn buông tay, chấp nhận thất bại, dễ rơi vào tình huống tiến thoái lưỡng nan.\n\nNăm 2018 của Bọ Cạp, với những ai độc thân bận rộn với công việc nên không quan tâm quá tới chuyện tình cảm. Bắt đầu từ nửa cuối tháng 8 đổ về sau vận đào hoa mới quay trở lại mang theo cho bạn những cơ hội mới.\n\nTình trạng sức khỏe khá ổn định, nhưng đôi khi xảy ra tai nạn nhỏ, việc bạn cần làm là phải lên kế hoạch đảm bảo sự an toàn, không để cho sự vô ý, vô tứ của mình khiến bản thân gặp họa.</string>
    <string name="bo_cap_text_detail">Tử vi cung Bọ Cạp 2018 (Hổ Cáp, Thiên Yết), trong năm nay sao Diêm Vương tiếp tục ngự trị tại khu vực công việc của Bọ Cạp truyền cảm hứng cho bạn để tiếp tục cố gắng, nỗ lực. Nhờ đó, tình hình học tập cho đến công việc đều có kết quả đáng kể.</string>
    <string name="cu_giai_text">Xem tử vi 12 cung hoàng đạo 2018, năm nay do sự thay đổi lớn quỹ đạo của Mặt Trăng, nên tâm thế của Cự Giải không ổn định, tâm trạng thất thường. Dù không có việc gì xảy ra chòm sao này vẫn cảm thấy phiền lòng nhưng không thể giải thích được lý do vì sao.\n\nNăm 2018 của Cự Giải sẽ trải qua nhiều giai đoạn căng thẳng. Nhưng bù lại, nhờ tác động của Mặt Trời và sao Kim, sự nghiệp và tài chính của bạn bước vào thời kỳ cao điểm. Đi kèm với đó là những ảnh hưởng tiêu cực của tiểu nhân vì ghen tị thành công của bạn mà họ sinh ra ghen ghét, đặt điều, gây trở ngại. Trong tình huống này, Cự Giải nên khiêm tốn, tùy thuộc vào hoàn cảnh mà xử lý cho phù hợp vì với những ai quá đáng quá thì bạn vẫn nên đáp trả chứ không nên im lặng vì mong rằng dĩ hòa vi quý.\n\nThời điểm từ giữa năm cho tới cuối năm do tác động của nhiều hành tinh khác nhau tạo nên quá nhiều biến động, mọi sự đều ngoài tầm kiểm soát của Cự Giải. Bạn phải đối mặt với những thách thức mới và cơ hội, nghề nghiệp, tình yêu, sức khỏe sẽ bước vào giai đoạn cần phải sửa đổi. Bạn sẽ nhận được rất nhiều góp ý và nhận xét từ mọi người ảnh hưởng đến quyết định của bạn. Nếu gặp được người giỏi trong các lĩnh vực này, tức là bạn có trong tay chìa khóa mở cánh cửa thành công, nếu không bạn sẽ đối mặt với nhiều rắc rối.\n\nCuối năm 2018, cung Cự Giải suy nghĩ rất nhiều và bạn nhận được những đáp án rất đáng kinh ngạc khiến bạn phải cố gắng rất nhiều để bản thân có thể đối mặt với thực tế.\n\nThực ra, bạn không cần phải lãng phí thời gian nghĩ ngợi nhiều, hãy để mọi thứ diễn ra tự nhiên vì bạn cần trải qua những thăng trầm như thế bạn mới trưởng thành hơn. Khoảng cách giữa thực tế và tưởng tượng chỉ có bạn mới thực sự đo lường được. Bất kể kết quả năm nay có ra sao thì vẫn can đảm để đối mặt với thách thức và nhờ đó những thứ được xem là bất khả thi cuối cùng sẽ trở thành có thể.</string>
    <string name="kim_nguu_text">Xem năm 2018 của 12 cung hoàng đạo, Kim Ngưu có sao Kim hỗ trợ cho cả sự nghiệp và gia tăng tài sản. Không những thế, các mối quan hệ nhờ đó mà cải thiện hơn hứa hẹn năm nay sẽ là năm đầy màu sắc của Kim Ngưu. Tuy nhiên, trong năm nay Kim Ngưu còn chịu ảnh hưởng bởi một số sao khác nên trải qua không thăng trầm vì thế, bạn cần phải sẵn sàng chuẩn bị tâm lý để đối mặt.\n\nXem tử vi 12 cung hoàng đạo 2018, Kim Ngưu trong năm nay nên tập trung vào các lĩnh vực kinh doanh liên quan tới chuyên môn cá nhân, hoặc những dự án có khả năng phát triển kỹ năng của bản thân. Bạn cũng nên chủ động hơn, không nên đứng yên chờ đợi, nếu cơ hội không tới bạn phải là người tạo ra nó, nếu không sự nghiệp sẽ không hề có thay đổi tích cực nào cả.\n\nNhiều khi nhiều ý tưởng quá lại không tốt vì đầu óc bạn cứ “trên mây” thì làm sao có thể làm việc được. Vì sao Kim, Mặt Trời, sao Thiên Vương và sao Thổ và các ngôi sao khác kiểm soát sự nghiệp của bạn sẽ mang lại cho bạn những thay đổi tích cực. Tuy nhiên, bạn phải thực tế, đừng quá mơ mộng. Nếu cần hãy có những điều chỉnh phù hợp chứ đừng tin rằng sẽ có “phép thuật” nào đó hỗ trợ bạn vào lúc này.\n\nNăm nay, sao Kim mang lại cho bạn may mắn về mặt tiền bạc, mặc dù không thể giúp Kim Ngưu giàu nhanh chóng sau một đêm, nhưng không thể phủ nhận một thực tế là bạn thường nhận được những khoản tiền “từ trên trời rơi xuống”.\n\nNgoài ra, sao Kim cũng sẽ thúc đẩy mặt cảm xúc của Kim Ngưu, dưới sự bảo vệ của sao Kim, năm nay bạn có cơ hội bước ra khỏi lớp mây mù trong chuyện tình cảm. Nhu cầu tình cảm của bạn được đáp ứng khi có nữ thần may mắn ghé thăm Kim Ngưu, làm tươi mới tình yêu khiến cho bạn cảm thấy tràn đầy sức sống.\n\nNăm 2018 của cung Kim Ngưu, về mặt sức khỏe, một mặt do tác động tích cực của sao Kim nên sức khỏe Kim Ngưu cơ bản là tốt, đặc biệt là bạn khỏe nhất trong tháng 7 hoặc nếu có bệnh thì được chữa khỏi và nhanh chóng bình phục sau khi điều trị. Mặt khác do ảnh hưởng của sao Thủy nghịch hành Kim Ngưu dễ mắc chứng đau đầu, bệnh liên quan tới dây thần kinh.\n\nVề mặt học tập, năm nay áp lực đối với Kim Ngưu tương đối lớn, nhưng rốt cuộc thì mọi sự đều trơn tru. Mỗi giờ lên lớp bạn cảm thấy có nhiều áp lực, có cảm giác tù bức, nhưng sau giờ học là cuộc sống đầy màu sắc, nhờ đó bạn không có cảm giác nhàm chán khi theo đuổi việc học. Tuy nhiên, để tiếp tục tiến bộ đòi hỏi Kim Ngưu phải kiên trì, vượt qua khó khăn, mệt mỏi để học hỏi, mở mang kiến thức.</string>
    <string name="bo_cap_title1">Bọ Cạp - Scorpio\n(24/10 - 21/11)</string>
    <string name="bo_cap_title2">Bọ Cạp - Scorpio (24/10 - 21/11)</string>
    <string name="txt_xem_them">XEM THÊM</string>
</resources>