<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkBlue">

    <TextView
        android:id="@+id/tv_title_detail_m002"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/d_210"
        android:layout_marginTop="@dimen/d_80"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/bo_cap_title1"
        android:textColor="@color/colorYellow"
        android:textSize="@dimen/d_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scview"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/d_20"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/d_20"
        android:layout_marginBottom="70dp"
        android:background="@drawable/im_detail"
        android:paddingStart="@dimen/d_20"
        android:paddingTop="@dimen/d_40"
        android:paddingEnd="@dimen/d_20"
        android:paddingBottom="@dimen/d_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_detail_m002"
        app:layout_constraintVertical_bias="0.1">

        <TextView
            android:id="@+id/tv_detail_m002"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bo_cap_text"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="@id/scview"
            app:layout_constraintEnd_toEndOf="@id/scview"
            app:layout_constraintStart_toStartOf="@id/scview"
            app:layout_constraintTop_toTopOf="@+id/scview" />
    </ScrollView>


    <ImageView
        android:id="@+id/iv_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_circle_blank" />

    <ImageView
        android:id="@+id/iv_detail_m002"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_bocap"
        app:layout_constraintBottom_toBottomOf="@+id/iv_circle"
        app:layout_constraintEnd_toEndOf="@+id/iv_circle"
        app:layout_constraintStart_toStartOf="@+id/iv_circle"
        app:layout_constraintTop_toTopOf="@+id/iv_circle" />

    <TextView
        android:id="@+id/tv_quay_lai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/im_quay_lai"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/txt_quay_lai"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/d_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>