<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkBlue">

    <ImageView
        android:id="@+id/iv_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_365"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_bg_title_1" />

    <ImageView
        android:id="@+id/iv_circle"
        android:layout_width="@dimen/d_320"
        android:layout_height="@dimen/d_330"
        android:layout_marginTop="@dimen/d_60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_circle_blank" />

    <ImageView
        android:id="@+id/iv_bo_cap"
        android:layout_width="@dimen/d_80"
        android:layout_height="@dimen/d_80"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="140dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/tv_tam"
        app:layout_constraintCircle="@id/tv_tam"
        app:layout_constraintCircleAngle="0"
        app:layout_constraintCircleRadius="@dimen/d_130"
        app:layout_constraintEnd_toEndOf="@+id/iv_circle"
        app:srcCompat="@drawable/ic_bocap" />

    <ImageView
        android:id="@+id/iv_thien_binh"
        android:layout_width="@dimen/d_80"
        android:layout_height="@dimen/d_80"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/tv_tam"
        app:layout_constraintCircle="@id/tv_tam"
        app:layout_constraintCircleAngle="30"
        app:layout_constraintCircleRadius="@dimen/d_130"
        app:layout_constraintStart_toEndOf="@+id/tv_tam"
        app:srcCompat="@drawable/ic_thien_binh" />

    <ImageView
        android:id="@+id/iv_song_ngu"
        android:layout_width="@dimen/d_80"
        android:layout_height="@dimen/d_80"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/tv_tam"
        app:layout_constraintCircle="@id/tv_tam"
        app:layout_constraintCircleAngle="60"
        app:layout_constraintCircleRadius="@dimen/d_130"
        app:layout_constraintStart_toEndOf="@+id/tv_tam"
        app:srcCompat="@drawable/ic_song_ngu" />

    <ImageView
        android:id="@+id/iv_ma_ket"
        android:layout_width="@dimen/d_80"
        android:layout_height="@dimen/d_80"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/tv_tam"
        app:layout_constraintCircle="@id/tv_tam"
        app:layout_constraintCircleAngle="90"
        app:layout_constraintCircleRadius="@dimen/d_130"
        app:layout_constraintStart_toEndOf="@+id/tv_tam"
        app:srcCompat="@drawable/ic_ma_ket" />

    <ImageView
        android:id="@+id/iv_bao_binh"
        android:layout_width="@dimen/d_80"
        android:layout_height="@dimen/d_80"
        android:scaleType="fitCenter"
        app:layout_constraintCircle="@id/tv_tam"
        app:layout_constraintCircleAngle="120"
        app:layout_constraintCircleRadius="@dimen/d_130"
        app:layout_constraintStart_toEndOf="@+id/tv_tam"
        app:layout_constraintTop_toTopOf="@+id/tv_tam"
        app:srcCompat="@drawable/ic_bao_binh" />

    <ImageView
        android:id="@+id/iv_cu_giai"
        android:layout_width="@dimen/d_80"
        android:layout_height="@dimen/d_80"
        android:scaleType="fitCenter"
        app:layout_constraintCircle="@id/tv_tam"
        app:layout_constraintCircleAngle="150"
        app:layout_constraintCircleRadius="@dimen/d_130"
        app:layout_constraintStart_toEndOf="@+id/tv_tam"
        app:layout_constraintTop_toTopOf="@+id/tv_tam"
        app:srcCompat="@drawable/ic_cu_giai" />

    <ImageView
        android:id="@+id/iv_xu_nu"
        android:layout_width="@dimen/d_80"
        android:layout_height="@dimen/d_80"
        android:scaleType="fitCenter"
        app:layout_constraintCircle="@id/tv_tam"
        app:layout_constraintCircleAngle="180"
        app:layout_constraintCircleRadius="@dimen/d_130"
        app:layout_constraintStart_toEndOf="@+id/tv_tam"
        app:layout_constraintTop_toBottomOf="@+id/tv_tam"
        app:srcCompat="@drawable/ic_xu_nu" />

    <ImageView
        android:id="@+id/iv_nhan_ma"
        android:layout_width="@dimen/d_80"
        android:layout_height="@dimen/d_80"
        android:scaleType="fitCenter"
        app:layout_constraintCircle="@id/tv_tam"
        app:layout_constraintCircleAngle="210"
        app:layout_constraintCircleRadius="@dimen/d_130"
        app:layout_constraintEnd_toStartOf="@+id/tv_tam"
        app:layout_constraintTop_toBottomOf="@+id/tv_tam"
        app:srcCompat="@drawable/ic_nhan_ma" />

    <ImageView
        android:id="@+id/iv_su_tu"
        android:layout_width="@dimen/d_80"
        android:layout_height="@dimen/d_80"
        android:scaleType="fitCenter"
        app:layout_constraintCircle="@id/tv_tam"
        app:layout_constraintCircleAngle="240"
        app:layout_constraintCircleRadius="@dimen/d_130"
        app:layout_constraintEnd_toStartOf="@+id/tv_tam"
        app:layout_constraintTop_toTopOf="@+id/tv_tam"
        app:srcCompat="@drawable/ic_su_tu" />

    <ImageView
        android:id="@+id/iv_kim_nguu"
        android:layout_width="@dimen/d_80"
        android:layout_height="@dimen/d_80"
        android:scaleType="fitCenter"
        app:layout_constraintCircle="@id/tv_tam"
        app:layout_constraintCircleAngle="270"
        app:layout_constraintCircleRadius="@dimen/d_130"
        app:layout_constraintEnd_toStartOf="@+id/tv_tam"
        app:layout_constraintTop_toTopOf="@+id/tv_tam"
        app:srcCompat="@drawable/ic_kim_nguu" />

    <ImageView
        android:id="@+id/iv_song_tu"
        android:layout_width="@dimen/d_80"
        android:layout_height="@dimen/d_80"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/tv_tam"
        app:layout_constraintCircle="@id/tv_tam"
        app:layout_constraintCircleAngle="300"
        app:layout_constraintCircleRadius="@dimen/d_130"
        app:layout_constraintEnd_toStartOf="@+id/tv_tam"
        app:srcCompat="@drawable/ic_song_tu" />

    <ImageView
        android:id="@+id/iv_bach_duong"
        android:layout_width="@dimen/d_80"
        android:layout_height="@dimen/d_80"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/tv_tam"
        app:layout_constraintCircle="@id/tv_tam"
        app:layout_constraintCircleAngle="330"
        app:layout_constraintCircleRadius="@dimen/d_130"
        app:layout_constraintEnd_toStartOf="@+id/tv_tam"
        app:srcCompat="@drawable/ic_bach_duong" />

    <TextView
        android:id="@+id/tv_detail"
        android:layout_width="331dp"
        android:layout_height="195dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/menu_detail_bg"
        android:lines="6"
        android:ellipsize="end"
        android:paddingStart="@dimen/d_30"
        android:paddingTop="@dimen/d_40"
        android:paddingEnd="@dimen/d_20"
        android:paddingBottom="@dimen/d_50"
        android:text="@string/bo_cap_text"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_app" />

    <ImageView
        android:id="@+id/iv_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_440"
        android:background="@drawable/ic_bocap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_10"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/bo_cap_title2"
        android:textColor="@color/colorYellow"
        android:textSize="@dimen/d_16"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail"
        app:layout_constraintStart_toStartOf="@+id/tv_detail"
        app:layout_constraintTop_toBottomOf="@+id/iv_app" />

    <TextView
        android:id="@+id/tv_xem_them"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/d_20"
        android:layout_marginBottom="@dimen/d_10"
        android:background="@drawable/tv_xem_them_bg"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/txt_xem_them"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail"
        app:layout_constraintStart_toStartOf="@+id/tv_detail" />

    <TextView
        android:id="@+id/tv_tam"
        android:layout_width="@dimen/d_1"
        android:layout_height="@dimen/d_1"
        android:background="@color/colorYellow"
        android:text=""
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/iv_circle"
        app:layout_constraintEnd_toEndOf="@+id/iv_circle"
        app:layout_constraintStart_toStartOf="@+id/iv_circle"
        app:layout_constraintTop_toTopOf="@+id/iv_circle" />

</androidx.constraintlayout.widget.ConstraintLayout>